compiler/tools/fpp-check/test/state_machine/initial_transitions/junction_cycle.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/initial_transitions/junction_cycle.fpp:4.3
  junction J { if g enter J else enter J }
  ^
error: encountered a junction cycle:
  junction transition at [ local path prefix ]/compiler/tools/fpp-check/test/state_machine/initial_transitions/junction_cycle.fpp:4.21 to junction J
